# sms-printer

./: .env.example  .gitignore  app.py  requirements.txt  setup_webhook.py  sms-printer.sln  start.bat
SmsPrinter/: Program.cs  SmsPrinter.csproj
SmsPrinter/Hubs/: PrinterHub.cs
SmsPrinter/Models/: Models.cs
SmsPrinter/Services/: PrinterService.cs
SmsPrinter/wwwroot/: index.html
deploy/: 99-escpos-printer.rules  README.md  install.sh  journald-sms-printer.conf  ngrok-run.sh  sms-printer-ngrok.service  sms-printer-webhook.service  sms-printer.service  sysctl-sms-printer.conf  uninstall.sh
printer-tool/: Cargo.toml
printer-tool/src/: main.rs
sms-printer/: app.py
templates/: index.html
